--- a/src/main/resources/eu/telecomnancy/labfx/VueCreationOffre.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/VueCreationOffre.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="394.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="labfx.VueCreationOffreController">
+<VBox fx:controller="eu.telecomnancy.labfx.VueCreationOffreController" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="394.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" >
    <children>
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="578.0" text="Créer une offre/demande">
          <font>
@@ -33,10 +33,10 @@
             <TextField fx:id="distance" prefWidth="150.0" promptText="Distance (km)" />
          </children>
       </HBox>
-      <HBox fx:id="dateFin" prefHeight="16.0" prefWidth="600.0" spacing="10.0">
+      <HBox  prefHeight="16.0" prefWidth="600.0" spacing="10.0">
          <children>
             <DatePicker fx:id="dateDebut" promptText="Date du début" />
-            <DatePicker promptText="Date de fin (optionnelle)" />
+            <DatePicker fx:id="dateFin" promptText="Date de fin (optionnelle)" />
             <TextField fx:id="duree" prefHeight="26.0" prefWidth="160.0" promptText="Durée du prêt (optionnelle)" />
          </children>
       </HBox>
