--- a/src/main/resources/eu/telecomnancy/labfx/ViewOffer.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/ViewOffer.fxml
@@ -139,8 +139,13 @@
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
          </VBox.margin>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="200.0">
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="100.0">
          <children>
+            <VBox alignment="CENTER">
+               <children>
+                  <Button fx:id="retour" mnemonicParsing="false" onAction="#retourMainScreen" text="Retour" />
+               </children>
+            </VBox>
             <VBox alignment="CENTER">
                <children>
                   <Button fx:id="reservebutton" mnemonicParsing="false" onAction="#reserve" text="Réserver" />
