--- a/src/main/resources/eu/telecomnancy/labfx/ViewOffer.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/ViewOffer.fxml
@@ -31,7 +31,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="type">
+                  <Label fx:id="type" prefHeight="80.0" prefWidth="118.0">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -41,7 +41,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="cout">
+                  <Label fx:id="cout" prefHeight="96.0" prefWidth="118.0">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -55,7 +55,7 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <Label fx:id="description" />
+                  <Label fx:id="description" prefHeight="196.0" prefWidth="230.0" />
                </children>
             </VBox>
             <ImageView fx:id="image" fitHeight="214.0" fitWidth="242.0" pickOnBounds="true" preserveRatio="true" />
