--- a/src/main/resources/eu/telecomnancy/labfx/MainScreen.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/MainScreen.fxml
@@ -76,7 +76,7 @@
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="100.0">
          <children>
             <Button fx:id="boutonAjouter" mnemonicParsing="false" onAction="#ajouterOffre" text="Ajouter" />
-            <Button fx:id="boutonProfil" mnemonicParsing="false" onAction="#displayProfil" text="Profil" />
+            <Button fx:id="boutonProfil" mnemonicParsing="false" onAction="#displayCompte" text="Profil" />
             <Button fx:id="boutonMessagerie" mnemonicParsing="false" onAction="#displayMessagerie" text="Messagerie" />
          </children>
          <VBox.margin>
