--- a/src/main/resources/eu/telecomnancy/labfx/ViewOffer.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/ViewOffer.fxml
@@ -3,14 +3,11 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="641.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ViewOfferController">
    <children>
@@ -192,8 +189,12 @@
             </VBox>
             <VBox alignment="CENTER">
                <children>
-                  <Button fx:id="reservebutton" mnemonicParsing="false" onAction="#reserve" text="Réserver" />
+                  <Button fx:id="reservebutton" mnemonicParsing="false" onAction="#reserve" prefHeight="22.0" prefWidth="62.0" text="Réserver" />
+                  <Label fx:id="reservationLabel" prefHeight="18.0" prefWidth="1.0" textFill="#949494" />
                </children>
+               <HBox.margin>
+                  <Insets top="20.0" />
+               </HBox.margin>
             </VBox>
             <VBox alignment="CENTER">
                <children>
