--- a/src/main/resources/eu/telecomnancy/labfx/Inbox.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/Inbox.fxml
@@ -12,6 +12,7 @@
    <children>
       <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
          <children>
+            <Button mnemonicParsing="false" onAction="#returnButton" text="Retour" />
             <ListView fx:id="conversationsList" maxHeight="1.7976931348623157E308" onMouseClicked="#selectConversation" prefHeight="330.0" prefWidth="300.0" VBox.vgrow="ALWAYS" />
             <HBox prefHeight="100.0" prefWidth="200.0">
                <children>
