--- a/src/main/resources/eu/telecomnancy/labfx/create_compte.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/create_compte.fxml
@@ -39,6 +39,7 @@
 
         <HBox alignment="CENTER" spacing="10" GridPane.columnIndex="0" GridPane.rowIndex="6" GridPane.columnSpan="2">
             <Button text="Create" onAction="#clickButton" styleClass="create-button" />
+            <Button fx:id="backLogin" mnemonicParsing="false" onAction="#backLogin" text="Back to Login" />
         </HBox>
     </children>
 </GridPane>
