--- a/src/main/resources/eu/telecomnancy/labfx/MainScreen.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/MainScreen.fxml
@@ -51,7 +51,7 @@
                   <TextField fx:id="distanceFiltre" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <TextField fx:id="coutFiltre" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <ComboBox fx:id="typeFiltre" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <ComboBox fx:id="evaluationFiltre" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TextField fx:id="evaluationFiltre" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <children>
                         <DatePicker fx:id="dateDebutFiltre" promptText="Début" />
