--- a/src/main/resources/eu/telecomnancy/labfx/Inbox.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/Inbox.fxml
@@ -8,27 +8,33 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.InboxScreen">
+
+<VBox xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.InboxScreen">
    <children>
-      <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
+      <fx:include source="DirectDealingMenu.fxml" />
+      <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#returnButton" text="Retour" />
-            <ListView fx:id="conversationsList" maxHeight="1.7976931348623157E308" onMouseClicked="#selectConversation" prefHeight="330.0" prefWidth="300.0" VBox.vgrow="ALWAYS" />
-            <HBox prefHeight="100.0" prefWidth="200.0">
+            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                <children>
-                  <Label text="Utilisateur:" />
-                  <TextField fx:id="interlocutorField" HBox.hgrow="ALWAYS" />
-                  <Button mnemonicParsing="false" onAction="#newConversation" text="Envoyer" />
+                  <Button mnemonicParsing="false" onAction="#returnButton" text="Retour" />
+                  <ListView fx:id="conversationsList" maxHeight="1.7976931348623157E308" onMouseClicked="#selectConversation" prefHeight="330.0" prefWidth="300.0" VBox.vgrow="ALWAYS" />
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Utilisateur:" />
+                        <TextField fx:id="interlocutorField" HBox.hgrow="ALWAYS" />
+                        <Button mnemonicParsing="false" onAction="#newConversation" text="Envoyer" />
+                     </children>
+                  </HBox>
+                  <HBox layoutX="10.0" layoutY="360.0" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Label text="Message:" />
+                        <TextArea fx:id="messageField" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
+                     </children>
+                  </HBox>
                </children>
-            </HBox>
-            <HBox layoutX="10.0" layoutY="360.0" prefHeight="100.0" prefWidth="200.0">
-               <children>
-                  <Label text="Message:" />
-                  <TextArea fx:id="messageField" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS" />
-               </children>
-            </HBox>
+            </VBox>
+            <fx:include fx:id="conversationView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="Conversation.fxml" HBox.hgrow="ALWAYS" />
          </children>
-      </VBox>
-      <fx:include fx:id="conversationView" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" source="Conversation.fxml" HBox.hgrow="ALWAYS" />
+      </HBox>
    </children>
-</HBox>
+</VBox>
