--- a/src/main/resources/eu/telecomnancy/labfx/ViewCompte.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/ViewCompte.fxml
@@ -17,6 +17,7 @@
       prefHeight="394.0" prefWidth="600.0" spacing="10.0"
       xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <children>
+        <fx:include source="DirectDealingMenu.fxml"/>
         <Label fx:id="userName" alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="578.0" text="User Name">
             <font>
                 <Font size="19.0" />
