--- a/src/main/resources/eu/telecomnancy/labfx/ViewCreateOffer.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/ViewCreateOffer.fxml
@@ -12,6 +12,7 @@
 
 <VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ViewCreateOfferController">
    <children>
+      <fx:include source="DirectDealingMenu.fxml"/>   
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="578.0" text="Créer une offre/demande">
          <font>
             <Font size="19.0" />
