--- a/src/main/resources/eu/telecomnancy/labfx/create_compte.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/create_compte.fxml
@@ -23,19 +23,19 @@
         </Text>
 
         <Label text="Nom" GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.columnSpan="2"  />
-        <TextField fx:id="nom" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <TextField fx:id="nom" onKeyPressed="#checkEnterNom" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
-        <Label text="Prenom" GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="2" />
-        <TextField fx:id="prenom" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label text="Prenom"  GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="2" />
+        <TextField fx:id="prenom" onKeyPressed="#checkEnterPrenom" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
         <Label text="Password" GridPane.columnIndex="0" GridPane.rowIndex="3" GridPane.columnSpan="2" />
-        <PasswordField fx:id="motdepasse" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <PasswordField fx:id="motdepasse" onKeyPressed="#checkEnterPassword" GridPane.columnIndex="1" GridPane.rowIndex="3" />
 
         <Label text="Email" GridPane.columnIndex="0" GridPane.rowIndex="4" GridPane.columnSpan="2" />
-        <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <TextField fx:id="email" onKeyPressed="#checkEnterEmail" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
         <Label text="Adresse" GridPane.columnIndex="0" GridPane.rowIndex="5" GridPane.columnSpan="2" />
-        <TextField fx:id="adresse" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+        <TextField fx:id="adresse" onKeyPressed="#checkEnterAdress" GridPane.columnIndex="1" GridPane.rowIndex="5" />
 
         <HBox alignment="CENTER" spacing="10" GridPane.columnIndex="0" GridPane.rowIndex="6" GridPane.columnSpan="2">
             <Button text="Create" onAction="#clickButton" styleClass="create-button" />
