--- a/src/main/resources/eu/telecomnancy/labfx/ViewCreateOffer.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/ViewCreateOffer.fxml
@@ -12,7 +12,7 @@
 
 <VBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" spacing="10.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ViewCreateOfferController">
    <children>
-      <fx:include source="DirectDealingMenu.fxml"/>   
+      <fx:include source="DirectDealingMenu.fxml" />   
       <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="578.0" text="Créer une offre/demande">
          <font>
             <Font size="19.0" />
@@ -51,9 +51,10 @@
             </Label>
          </children>
       </HBox>
-      <HBox prefHeight="100.0" prefWidth="200.0" spacing="265.0">
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
          <children>
             <Button fx:id="valider" mnemonicParsing="false" onAction="#validerCreation" prefHeight="26.0" prefWidth="59.0" text="Valider" />
+            <Label fx:id="errorMessage" prefHeight="18.0" prefWidth="246.0" textFill="#e10e0e" />
             <Button fx:id="retour" mnemonicParsing="false" onAction="#retourMain" text="Retour" />
          </children>
       </HBox>
