--- a/src/main/resources/eu/telecomnancy/labfx/reservationNotification.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/reservationNotification.fxml
@@ -6,8 +6,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.ReservationNotification">
    <children>
       <Label fx:id="notificationLabel" text="Label" />
       <HBox alignment="CENTER" spacing="5.0">
@@ -18,11 +17,6 @@
                </font>
             </Button>
             <Button minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#refuseReservation" prefHeight="25.0" prefWidth="75.0" text="Refuser" HBox.hgrow="ALWAYS">
-               <font>
-                  <Font size="12.0" />
-               </font>
-            </Button>
-            <Button disable="true" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#putOnWaitList" prefHeight="25.0" prefWidth="75.0" text="Liste d'attente" HBox.hgrow="ALWAYS">
                <font>
                   <Font size="12.0" />
                </font>
