--- a/src/main/resources/eu/telecomnancy/labfx/MainScreen.fxml
+++ b/src/main/resources/eu/telecomnancy/labfx/MainScreen.fxml
@@ -14,9 +14,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.MainScreenController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="eu.telecomnancy.labfx.MainScreenController">
    <children>
-   <fx:include source="DirectDealingMenu.fxml"/>
+   <fx:include source="DirectDealingMenu.fxml" />
       <HBox alignment="CENTER" prefHeight="109.0" prefWidth="600.0">
          <children>
             <Label alignment="CENTER" text="Tableau de bord">
@@ -27,15 +27,26 @@
          </children>
       </HBox>
       <GridPane hgap="5">
-         <padding><Insets left="170"/></padding>
+         <padding><Insets left="170" /></padding>
          <children>
-         <Label text="Nom" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-         <Label text="Coût" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
-         <Label text="Distance" GridPane.rowIndex="0" GridPane.columnIndex="2"/>
-         <Label text="Type" GridPane.rowIndex="0" GridPane.columnIndex="3"/>
-         <Label text="DateStart" GridPane.rowIndex="0" GridPane.columnIndex="4"/>
-         <Label text="DateEnd" GridPane.rowIndex="0" GridPane.columnIndex="5"/>
+         <Label text="Nom" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+         <Label text="Coût" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+         <Label text="Distance" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+         <Label text="Type" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+         <Label text="DateStart" GridPane.columnIndex="4" GridPane.rowIndex="0" />
+         <Label text="DateEnd" GridPane.columnIndex="5" GridPane.rowIndex="0" />
          </children>
+         <columnConstraints>
+            <ColumnConstraints />
+            <ColumnConstraints />
+            <ColumnConstraints />
+            <ColumnConstraints />
+            <ColumnConstraints />
+            <ColumnConstraints />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints />
+         </rowConstraints>
       </GridPane>
       <HBox prefHeight="410.0" prefWidth="600.0">
          <children>
@@ -59,11 +70,11 @@
                   <Label text="Coût" GridPane.rowIndex="3" />
                   <Label text="Dates" GridPane.rowIndex="4" />
                   <Label text="Evaluation" GridPane.rowIndex="5" />
-                  <TextField fx:id="nomFiltre" prefHeight="26.0" prefWidth="91.0" GridPane.columnIndex="1"  GridPane.rowIndex="0"/>
+                  <TextField fx:id="nomFiltre" prefHeight="26.0" prefWidth="91.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
                   <TextField fx:id="distanceFiltre" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <TextField fx:id="coutFiltre" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                   <ComboBox fx:id="typeFiltre" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="evaluationFiltre" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+                  <TextField fx:id="evaluationFiltre" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
                   <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="10.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                      <children>
                         <DatePicker fx:id="dateDebutFiltre" promptText="Début" />
@@ -85,15 +96,25 @@
             </ScrollPane>
          </children>
       </HBox>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="100.0">
+      <GridPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
          <children>
-            <Button fx:id="boutonAjouter" mnemonicParsing="false" onAction="#ajouterOffre" text="Ajouter" />
-            <Button fx:id="boutonProfil" mnemonicParsing="false" onAction="#displayCompte" text="Profil" />
-            <Button fx:id="boutonMessagerie" mnemonicParsing="false" onAction="#displayMessagerie" text="Messagerie" />
+            <Button fx:id="boutonAjouter" mnemonicParsing="false" onAction="#ajouterOffre" text="Ajouter" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Button fx:id="boutonProfil" mnemonicParsing="false" onAction="#displayCompte" text="Profil" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Button fx:id="boutonMessagerie" mnemonicParsing="false" onAction="#displayMessagerie" text="Messagerie" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+            <Label fx:id="notificationsLabel" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
          </children>
-         <VBox.margin>
-            <Insets bottom="5.0" top="5.0" />
-         </VBox.margin>
-      </HBox>
+      </GridPane>
    </children>
+   <padding>
+      <Insets bottom="5.0" />
+   </padding>
 </VBox>
